--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "build-dev": "webpack --mode=development",
     "build-prod": "webpack --mode=production",
-    "serve": "webpack serve --mode=development"
+    "start": "webpack serve --mode=development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reset-css": "^5.0.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -22,6 +24,7 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.7.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
