--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.1.3",
     "react": "^18.2.0",
+    "react-animate-height": "^3.0.5",
     "react-dom": "^18.2.0",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6"
