--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-animate-height": "^3.0.5",
     "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6"
   },
