--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.1.3",
+    "chart.js": "^4.0.1",
     "react": "^18.2.0",
     "react-animate-height": "^3.0.5",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.1",
