--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-animate-height": "^3.0.5",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-transition-group": "^4.4.5",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6"
