--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "fred-api": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3"
   },
   "devDependencies": {
