--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "chart.js": "^4.0.1",
     "react": "^18.2.0",
     "react-animate-height": "^3.0.5",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-transition-group": "^4.4.5",
+    "redux": "^4.2.0",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6"
   },
