--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "test": "cross-env NODE_ENV=test jest --runInBand ",
     "test:mockdb": "cross-env NODE_ENV=test nodemon index.js"
   },
   "keywords": [],
@@ -29,8 +29,5 @@
     "mongodb-memory-server": "^8.10.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1"
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
