--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
-    "test": "cross-env NODE_ENV=test jest --runInBand ",
+    "test": "cross-env NODE_ENV=test jest --runInBand --forceExit --detectOpenHandles",
     "test:mockdb": "cross-env NODE_ENV=test nodemon index.js"
   },
   "keywords": [],
