--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "chart.js": "^4.0.1",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-animate-height": "^3.0.5",
     "react-chartjs-2": "^5.0.1",
@@ -46,6 +47,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.7.0",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
