--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "midtrader_backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
-    "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles",
-    "test:mockdb": "cross-env NODE_ENV=test nodemon index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.0",
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.3"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "jest": "^29.3.1",
-    "mongodb-memory-server": "^8.10.1",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.1"
-  }
+	"name": "midtrader_backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "cross-env NODE_ENV=production node index.js",
+		"dev": "cross-env NODE_ENV=development nodemon index.js",
+		"build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
+		"test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles",
+		"start:test": "cross-env NODE_ENV=test node index.js",
+		"start:nodemon:test": "cross-env NODE_ENV=test nodemon index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.2.0",
+		"bcrypt": "^5.1.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"express-async-errors": "^3.1.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.7.3"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3",
+		"jest": "^29.3.1",
+		"mongodb-memory-server": "^8.10.1",
+		"nodemon": "^2.0.20",
+		"supertest": "^6.3.1"
+	}
 }
