--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,56 +1,58 @@
 {
-  "name": "midtrader_frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --mode=production",
-    "start": "webpack serve --mode=development",
-    "test": "jest --runInBand --detectOpenHandles"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.0",
-    "axios": "^1.1.3",
-    "chart.js": "^4.0.1",
-    "history": "^5.3.0",
-    "react": "^18.2.0",
-    "react-animate-height": "^3.0.5",
-    "react-chartjs-2": "^5.0.1",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
-    "react-transition-group": "^4.4.5",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2",
-    "reset-css": "^5.0.1",
-    "styled-components": "^5.3.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "babel-jest": "^29.3.1",
-    "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "mini-css-extract-plugin": "^2.7.0",
-    "redux-mock-store": "^1.5.4",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.11.1"
-  }
+	"name": "midtrader_frontend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "webpack --mode=production",
+		"start": "webpack serve --mode=development",
+		"test": "jest --runInBand --detectOpenHandles",
+		"cypress:open": "cypress open"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.2.1",
+		"@fortawesome/free-regular-svg-icons": "^6.2.1",
+		"@fortawesome/free-solid-svg-icons": "^6.2.1",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@reduxjs/toolkit": "^1.9.0",
+		"axios": "^1.1.3",
+		"chart.js": "^4.0.1",
+		"history": "^5.3.0",
+		"react": "^18.2.0",
+		"react-animate-height": "^3.0.5",
+		"react-chartjs-2": "^5.0.1",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^6.4.3",
+		"react-transition-group": "^4.4.5",
+		"redux": "^4.2.0",
+		"redux-thunk": "^2.4.2",
+		"reset-css": "^5.0.1",
+		"styled-components": "^5.3.6"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.2",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-react": "^7.18.6",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^14.4.3",
+		"babel-jest": "^29.3.1",
+		"babel-loader": "^9.1.0",
+		"css-loader": "^6.7.2",
+		"cypress": "^11.2.0",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.5.0",
+		"jest": "^29.3.1",
+		"jest-environment-jsdom": "^29.3.1",
+		"mini-css-extract-plugin": "^2.7.0",
+		"redux-mock-store": "^1.5.4",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.75.0",
+		"webpack-cli": "^5.0.0",
+		"webpack-dev-server": "^4.11.1"
+	}
 }
