--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.4.3",
+		"react-spinners": "^0.13.7",
 		"react-transition-group": "^4.4.5",
 		"redux": "^4.2.0",
 		"redux-thunk": "^2.4.2",
