--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,8 @@
 		"babel-loader": "^9.1.0",
 		"css-loader": "^6.7.2",
 		"cypress": "^11.2.0",
+		"eslint": "^8.29.0",
+		"eslint-plugin-react": "^7.31.11",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.3.1",
