--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -39,11 +39,10 @@
             "error",
             "always"
         ],
-        "cypress/no-assigning-return-values": "error",
-        "cypress/no-unnecessary-waiting": "error",
-        "cypress/assertion-before-screenshot": "warn",
-        "cypress/no-force": "warn",
-        "cypress/no-async-tests": "error",
-        "cypress/no-pause": "error"
+        "no-undef":"off",
+        "no-unused-vars":"off",
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error"
+
     }
 }
