--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,12 +51,14 @@
 		"eslint": "^8.29.0",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-jest": "^27.1.6",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.31.11",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.3.1",
 		"jest-environment-jsdom": "^29.3.1",
 		"mini-css-extract-plugin": "^2.7.0",
+		"prettier": "2.8.1",
 		"redux-mock-store": "^1.5.4",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.75.0",
