--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -11,6 +11,8 @@
     "ecmaVersion": "latest"
   },
   "rules": {
+    "no-undef": "off",
+    "no-unused-vars": "off",
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
