--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.31.11",
 		"file-loader": "^6.2.0",
+		"html-loader": "^4.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.3.1",
 		"jest-environment-jsdom": "^29.3.1",
