deploy midtrader app v0.1

--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -1,6 +1,6 @@
 {
   "testEnvironment": "node",
   "verbose": true,
-  "setupFiles": ["<rootDir>/tests/set_env_vars.js"],
+  "setupFiles": ["<rootDir>/tests/setEnvVars.js"],
   "forceExit": true
 }
